--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -1,9 +1,9 @@
 # 数据格式可以为 yaml(文件以.yml结尾) 或者json(文件以.json结尾)
 # 如果YAML格式的数据请先检查格式是否有误，可选检查工具 http://www.yamllint.com
 
-title: "简历标题"
+title: "简历"
 lang: "zh" #语言设置 zh表示中文 en 表示英语
-name: "你的名字"
+name: "沈瑶"
 jobtitle: "求职意向" #可空不显示
 photo: "assets/img/photo.jpg" #照片可空，不显示
 
@@ -96,6 +96,7 @@ others: #其他列表显示
     items: #单行列表
     - 睡觉
     - 吃饭
+    - 打豆豆
     - coding
   - title: 列表
     list:
