--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -4,7 +4,7 @@
 title: "简历"
 lang: "zh" #语言设置 zh表示中文 en 表示英语
 name: "沈瑶"
-jobtitle: "求职意向" #可空不显示
+jobtitle: "语音算法工程师" #可空不显示
 photo: "assets/img/photo.jpg" #照片可空，不显示
 
 #联系方式
