--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -30,14 +30,11 @@ main: #简历主要内容，
 - type: education #类别为ID
   name: 教育 #显示名称，空则使用type
   content: #内容基本格式 标题-副标题-日期-详细内容 (都允许空)
-  - title: 大学名称
-    duration: "2011年x月 - 2015年"
-    sub: 地点或学历
-    detail: 专业或者简短说明
-  - title: Your University
-    duration: Aug 2007 - Jun 2011
-    sub: Ut enim ad minim veniam
-    detail: Master Bachelor of Computer Science & Technology.
+  - title: 北京首都医科大学
+    duration: "2008年9月 - 2015年7月"
+    sub: 硕士学位
+    detail: 七年临床专业
+
 
 - type: skills
   # name: "技能"
