--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -44,6 +44,10 @@ main: #简历主要内容，
     - Python
     - Shell
     - C/C++
+   - title: 机器学习工具
+    items: #itmems 可以小块的方式显示
+    - TensorFlow
+    - PyTorch
  
 
 - type: experience
@@ -53,21 +57,21 @@ main: #简历主要内容，
     sub: 北京时代拓灵科技有限公司
     duration: "2016年10月 - 2019年2月"
     tags:
-    - 标签
+    - 声纹、唤醒、异常声、
     summary: 职务或者工作总结(自动折叠)
     detail: 同时包含 summary和detail在Chrome，Safari(包括IOS)，Android和新版Firefox等会自动折叠，不支持折叠的浏览器和展开后表现一致
     # open: open
     #可以设置open默认展开
-  - title: Job Title
-    sub: Your 2nd, Inc.  
-    duration: Apr 2013 - Mar 2016
-    tags: 
-    - tagname
-    summary: Summary your job or work. (Collapse)
-    detail: Details can be collapsed in Chrome Safari, Firefox, Opera and so on. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
+  - title: 语音算法工程师
+    sub: 北京华控智加科技有限公司
+    duration: "2019年2月 - 至今"
+    tags:
+    - 语言模型、声纹、麦克风阵列算法
+    summary: 职务或者工作总结(自动折叠)
+    detail: 同时包含 summary和detail在Chrome，Safari(包括IOS)，Android和新版Firefox等会自动折叠，不支持折叠的浏览器和展开后表现一致
+  
 - type: projects
-  name: Projects
+  name: 项目
   content:
   - title: 项目名称
     duration: xxxx年xx月 - yyyy年yy月
