--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -73,16 +73,30 @@ main: #简历主要内容，
 - type: projects
   name: 项目
   content:
-  - title: 项目名称
+  - title: 语音唤醒
     duration: xxxx年xx月 - yyyy年yy月
     detail: 项目和工作介绍，项目总结.
     sub: 维护者
-  - title: Project Name
-    summary: Projects' introduction or summary
-    detail:
-      md: _data/demo.md
-    sub: Creator and maintainer.
-   #可继续添加更多内容
+  - title: 声纹识别
+    duration: xxxx年xx月 - yyyy年yy月
+    detail: 项目和工作介绍，项目总结.
+    sub: 维护者
+  - title: 说话人分割
+    duration: xxxx年xx月 - yyyy年yy月
+    detail: 项目和工作介绍，项目总结.
+    sub: 维护者
+  - title: 异常声检测
+    duration: xxxx年xx月 - yyyy年yy月
+    detail: 项目和工作介绍，项目总结.
+    sub: 维护者
+  - title: 语音识别语言模型训练
+    duration: xxxx年xx月 - yyyy年yy月
+    detail: 项目和工作介绍，项目总结.
+    sub: 维护者
+  - title: 麦克风阵列定位/波束成形算法
+    duration: xxxx年xx月 - yyyy年yy月
+    detail: 项目和工作介绍，项目总结.
+    sub: 维护者
 
 #others 其他简略内容(列表)
 others: #其他列表显示
