--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -51,15 +51,15 @@ main: #简历主要内容，
  
 
 - type: experience
-  name: 经验
+  name: 工作经历
   content:
   - title: 语音算法工程师
     sub: 北京时代拓灵科技有限公司
     duration: "2016年10月 - 2019年2月"
     tags:
-    - 声纹、唤醒、异常声、
-    summary: 职务或者工作总结(自动折叠)
-    detail: 同时包含 summary和detail在Chrome，Safari(包括IOS)，Android和新版Firefox等会自动折叠，不支持折叠的浏览器和展开后表现一致
+    - 声纹、唤醒、异常声、模型压缩
+    summary: 语音算法人工智能小组负责人
+    detail: 
     # open: open
     #可以设置open默认展开
   - title: 语音算法工程师
@@ -67,16 +67,16 @@ main: #简历主要内容，
     duration: "2019年2月 - 至今"
     tags:
     - 语言模型、声纹、麦克风阵列算法
-    summary: 职务或者工作总结(自动折叠)
-    detail: 同时包含 summary和detail在Chrome，Safari(包括IOS)，Android和新版Firefox等会自动折叠，不支持折叠的浏览器和展开后表现一致
-  
+    summary: 
+    detail: 
+    
 - type: projects
-  name: 项目
+  name: 项目经验
   content:
   - title: 语音唤醒
-    duration: xxxx年xx月 - yyyy年yy月
-    detail: 项目和工作介绍，项目总结.
-    sub: 维护者
+    duration: 2017年 - 2018年
+    detail: 初期使用传统模式GMM-HMM，基于pocketsphinx框架进行改进，在asr模型上进行adaptation，通过清洗数据、调整参数使唤醒效果最优（唤醒率、误唤醒率）；后期使用神经网络（tensorflow），多次调整网络结构、筛选训练数据后，效果已优于传统模式，目前已陆续尝试了CNN、dsCNN、LSTM、GRU等多种模型，之后打算尝试GAN；协助移植；模型压缩，对神经网络模型进行8bit量化（效果很好），尝试三值化（效果不好）
+    sub: 主导人
   - title: 声纹识别
     duration: xxxx年xx月 - yyyy年yy月
     detail: 项目和工作介绍，项目总结.
