--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -60,7 +60,7 @@ main: #简历主要内容，
     - 人工智能小组负责人
     summary: 声纹、唤醒、异常声、模型压缩
     detail: 负责的项目包括：1.智能门锁和车载系统的声纹识别；2.电视机和音响的低功耗语音唤醒；3.打砸ATM机异常声检测；4.唤醒模型量化压缩等项目
-    # open: open
+    open: open
     #可以设置open默认展开
   - title: 语音算法工程师
     sub: 北京华控智加科技有限公司
@@ -69,6 +69,7 @@ main: #简历主要内容，
     - 语音算法小组主要成员之一
     summary: 语言模型、声纹/说话人分割、麦克风阵列算法
     detail: 负责项目包括：1.语音识别(ASR)语言模型训练、优化，生成发音词典(包括多音字)；2.公安部声纹系统优化，说话人分割/聚类；3.麦克风阵列定位算法实现与定点化，波束成形(Beamforming)算法优化/定点化；
+    open: open
     
 - type: projects
   name: 项目经验
