--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -17,7 +17,7 @@ contact: #联系方式连接等3~5行
   icon: 'icons/phone.svg'
 - text: "puppet-nine"
   href: 'http://your-website.com'
-  icon: 'icons/phone.svg'
+  icon: 'icons/qq2.svg'
 - text: "961403901"
   href: 'https://github.com/NewFuture'
   icon: "icons/phone.svg"
