--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -20,7 +20,7 @@ contact: #联系方式连接等3~5行
   icon: 'icons/phone.svg'
 - text: "961403901"
   href: 'https://github.com/NewFuture'
-  icon: "../assets/img/01.jpg"
+  icon: "icons/01.jpg"
   attr: 'target="_blank"' #新标签页打开
   # - text: "地址"
   #   icon: "icons/location.svg"
