--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -48,6 +48,7 @@ main: #简历主要内容，
     items: #itmems 可以小块的方式显示
     - TensorFlow
     - PyTorch
+    - Kaldi
  
 
 - type: experience
@@ -68,7 +69,7 @@ main: #简历主要内容，
     tags:
     - 语音算法小组主要成员之一
     summary: 语言模型、声纹/说话人分割、麦克风阵列算法
-    detail: 负责项目包括：1.语音识别(ASR)语言模型训练、优化，生成发音词典(包括多音字)；2.公安部声纹系统优化，说话人分割/聚类；3.麦克风阵列定位算法实现与定点化，波束成形(Beamforming)算法优化/定点化；
+    detail: 负责项目包括：1.语音识别(ASR)语言模型训练、优化，生成发音词典(包括多音字)；2.公安部声纹系统优化，说话人分割/聚类；3.麦克风阵列定位算法实现与定点化，波束成形(Beamforming)算法优化/定点化；4.声成像。
     open: open
     
 - type: projects
@@ -76,27 +77,27 @@ main: #简历主要内容，
   content:
   - title: 语音唤醒+模型压缩
     duration: 2017年 - 2018年
-    detail: 传统方法和深度学习(DL)两种方法。传统方法基于GMM-HMM，在ASR大模型上进行自适应，进行数据增强(加/降噪、加/去混响、改变音量/语速等)、调参使模型EER达到2%以下；DL基于TensorFlow，尝试CNN、dsCNN、LSTM、BiLSTM、GRU、BiGRU等不同网络，优化后效果优于传统方法；对dsCNN版本模型进行量化压缩，其中8bit量化(定点)压缩，模型大小压缩4~5倍，运算速度大幅度提升，之后还尝试了三值化、二值化量化，准确率有所下降。
+    detail: 传统方法和深度学习(DL)两种方法。传统方法基于GMM-HMM，在ASR大模型上进行自适应，进行数据增强(加/降噪、加/去混响、改变音量/音速等)、调参使模型等错误率(EER)达到2%以下；DL基于TensorFlow，尝试CNN、dsCNN、LSTM、BiLSTM、GRU、BiGRU等不同网络，优化后效果优于传统方法；对dsCNN版本模型进行量化压缩(基于Cortex-M3)，其中8bit量化(定点)压缩，模型大小压缩4~5倍，运算速度大幅度提升，且准确率无明显下降，之后还尝试了三值化、二值化量化，准确率有所下降。
     sub: 主导人
   - title: 声纹识别
     duration: 2018年 - 2019年2月
-    detail:  初期尝试了kaldi sre10 ivector的效果；之后使用alize 传统的GMM-UBM的方式，反复调试，最终在文本相关的短语音识别上达到了很好的效果（FRR、FAR、EER），并使用过alize的ivector、JFA、PLDA；后面转用神经网络，使用dvector，尝试使用各种网络、cosface、triplet loss、PLDA等，目前能达到比较好的效果，尤其是非文本相关的长语音；采集手机录音数据，训练防手机录音模型，加入到声纹识别中。目前声纹识别还存在一些问题，最主要的是信道鲁棒性，还正在设法解决中，下一步会尝试multitask。
+    detail:  传统方法基于GMM-UBM，结合JFA、PLDA等，对文本相关的声纹识别和短语音上能达到较好的效果，适用于训练数据较少的应用场景。尝试过kaldi的ivector。机器学习方法参考Variani的论文，使用dvector，结合cosface、triplet loss和PLDA等，EER能降低到0.5%以下(非文本相关5秒音频)。采集/模拟手机录音数据，增加声纹防手机录音模型。最后还尝试多任务学习(声纹+语音识别)和文本提示声纹识别模型(动态验证码)
     sub: 主导人
   - title: 异常声检测
     duration: 2017年 - 2018年
-    detail: 开始做过基于机器学习的汽车鸣笛检测、无人机声音检测，不过后面项目由于各种原因搁置了，模型也就未在进一步优化；后面做过尖叫、枪声、砸玻璃、砸银行ATM机等的异常声检测，过程包括写爬虫爬取音频数据、数据筛选处理、模型搭建并训练、调试等，目前项目正在推进中，会根据实际需求进行改进。
-    sub: 维护者
+    detail: 基于语音唤醒的框架(tensorflow)，做过汽车鸣笛检测、无人机声音检测、隧道刹车检测、尖叫/枪声/砸玻璃/砸银行ATM机等的异常声检测，部分项目缺少训练数据，通过各种方式进行数据增强，还包括写爬虫爬取音频数据、数据筛选处理、模型搭建并训练、调试等
+    sub: 主导人
   - title: 说话人分割
     duration: 2019年 - 2020年10月
     detail: 项目和工作介绍，项目总结.
     sub: 主导人
   - title: 语音识别语言模型训练
     duration: 2019年 - 2020年10月
-    detail: 基于kaldi中的相关工具，进行ASR的语言模型的训练，最终合成HCLG。所做工作包括词频统计、整理筛选词典、文本清洗正则化、分词、语言模型训练等，还包括了专用领域文本爬取、词典生成、模型训练。文本整理过程中还有中文和英文的词转音素（G2P）、多音字爬取、拼音/音标转音素等工作。并参加了国家互联网安全中心组织的音转字、声纹的比赛。
-    sub: 维护者
+    detail: 基于kaldi中的相关工具，进行ASR的语言模型的训练，最终合成HCLG。所做工作包括词频统计、整理筛选词典、文本清洗正则化、分词、语言模型训练等，还包括了专用领域文本爬取、词典生成、模型训练。文本整理过程中还有中文和英文的词转音素（G2P）、多音字爬取、拼音/音标转音素等工作
+    sub: 主要研发成员
   - title: 麦克风阵列定位/波束成形算法
     duration: 2019年2月 - 至今
-    detail: 参考ODAS，基于公司的麦克风阵列（7mic环阵）研发定点化的定位算法。声源定位主要涉及到对GCC-PHAT、FFT的定点化。后续还加入了beamforming，beamforming尝试了delay-sum、MVDR、CGMM-MVDR三种算法，考虑到实时性选择了前两个，并进行定点化，其中MVDR定点化比较困难，尤其是矩阵求逆，后面采用了一些小技巧解决了这个问题。目前项目已基本完成，后续可能还会加入ANS、AEC、SST或声成像等相关算法。
+    detail: 基于8麦环阵研发定点化的定位算法。声源定位(DOA)主要涉及到对相应算法GCC-PHAT、FFT的定点化。后续实现beamforming，beamforming实现了delay-sum、MVDR的定点化和CGMM-MVDR、GSC浮点算法，支持动态方向和固定方向beamforming
     sub: 维护者
   - title: 声成像
     duration: 2019年11月 - 至今
