--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -89,8 +89,7 @@ main: #简历主要内容，
     sub: 主导人
   - title: 说话人分割
     duration: 2019年 - 2020年10月
-    detail: 基于xvector的声纹模型搭建的说话人分割系统，负责完成评测工具，除了kaldi计算DER的功能，还需可以统计说话人时长、生成TextGrid。 基于PLDA打分后的说话人聚类，测试不同聚类方法(k-mean、H)，改进聚类方法，
-使聚类效果最优(2个说话人DER低于14%)
+    detail: 基于xvector的声纹模型搭建的说话人分割系统，负责完成评测工具，除了kaldi计算DER的功能，还需可以统计说话人时长、生成TextGrid。 基于PLDA打分后的说话人聚类，测试不同聚类方法(k-mean、H)，改进聚类方法，使聚类效果最优(2个说话人DER低于14%)
     sub: 主导人
   - title: 语音识别语言模型训练
     duration: 2019年 - 2020年10月
