--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -33,7 +33,7 @@ main: #简历主要内容，
   - title: 首都医科大学
     duration: "2008年9月 - 2015年7月"
     sub: 北京
-    detail: 七年临床专业硕士研究生学位
+    detail: 七年临床专业 硕士研究生学位
 
 
 - type: 技能
@@ -89,8 +89,8 @@ main: #简历主要内容，
     sub: 主导人
   - title: 说话人分割
     duration: 2019年 - 2020年10月
-    detail: 基于xvector的声纹模型搭建的说话人分割系统，负责完成评测工具，除了kaldi计算DER的功能，还需可以统计说话人时长、生成TextGrid。 基于PLDA打分后的说话人聚类，测试不同聚类方法(k-mean、H)，改进聚类方法，使聚类效果最优(2个说话人DER低于14%)
-    sub: 主导人
+    detail: 基于xvector的声纹模型搭建的说话人分割系统，负责完成评测工具，除了kaldi计算DER的功能，还需可以统计说话人时长、生成TextGrid。 基于PLDA打分后的说话人聚类，测试不同聚类方法(k-mean、AHC、DBSCAN)，改进聚类方法，使聚类效果最优(2个说话人DER约11%)
+    sub: 主要研发成员
   - title: 语音识别语言模型训练
     duration: 2019年 - 2020年10月
     detail: 基于kaldi中的相关工具，进行ASR的语言模型的训练，最终合成HCLG。所做工作包括词频统计、整理筛选词典、文本清洗正则化、分词、语言模型训练等，还包括了专用领域文本爬取、词典生成、模型训练。文本整理过程中还有中文和英文的词转音素（G2P）、多音字爬取、拼音/音标转音素等工作
